--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My simple website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    <h1>This is a simple header</h1>
-    <p>This is a simple text</p>
+    
+    <div class="color" >
+        <h1>This is a simple header</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, quo, cumque qui esse eligendi explicabo nesciunt reiciendis quas quidem mollitia magnam dolore cupiditate repellendus ea voluptatibus temporibus dolorem dignissimos veritatis!</p>
+    </div>
 </body>
 </html>
