--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
 <body>
     
     <div class="color" >
-        <h1>This is a simple header</h1>
+        <h1>This is my first blog</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, quo, cumque qui esse eligendi explicabo nesciunt reiciendis quas quidem mollitia magnam dolore cupiditate repellendus ea voluptatibus temporibus dolorem dignissimos veritatis!</p>
     </div>
+    <div class="color" >
+        <h1>This is my second blog</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, quo, cumque qui esse eligendi explicabo nesciunt reiciendis quas quidem mollitia magnam dolore cupiditate repellendus ea voluptatibus temporibus dolorem dignissimos veritatis!</p>
+    </div>
+    <div class="color" >
+        <h1>This is my third blog</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, quo, cumque qui esse eligendi explicabo nesciunt reiciendis quas quidem mollitia magnam dolore cupiditate repellendus ea voluptatibus temporibus dolorem dignissimos veritatis!</p>
+    </div>
+
 </body>
 </html>
