--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <h1>This is my third blog</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, quo, cumque qui esse eligendi explicabo nesciunt reiciendis quas quidem mollitia magnam dolore cupiditate repellendus ea voluptatibus temporibus dolorem dignissimos veritatis!</p>
     </div>
+    <div class="color" >
+        <h1>How to push incremental code in Github</h1>
+        <img src="images/nature.jpg" alt="This is a natural pic">
+        <ol>
+            <li>git add .</li>
+            <li>git commit -m"Write a meaningful message"</li>
+            <li>git push</li>
+        </ol>
+    </div>
 
 </body>
 </html>
