added three images with nature

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         <h1>This is my third blog</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, quo, cumque qui esse eligendi explicabo nesciunt reiciendis quas quidem mollitia magnam dolore cupiditate repellendus ea voluptatibus temporibus dolorem dignissimos veritatis!</p>
     </div>
-    <div class="color" >
+    <div class="nature" >
         <h1>How to push incremental code in Github</h1>
-        <img src="images/nature.jpg" alt="This is a natural pic">
+        <img src="images/nature.jpg" alt="This is a natural pic" width="400px" height="200px">
+        <img src="images/evo8.jpg" alt="This is a natural pic" width="400px" height="200px">
+        <img src="images/toyota.jpg" alt="This is a natural pic" width="400px" height="200px">
+        <img src="images/rx7.jpg" alt="This is a natural pic" width="400px" height="200px">
         <ol>
             <li>git add .</li>
             <li>git commit -m"Write a meaningful message"</li>
